fixed link contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -150,6 +150,10 @@ header p {
     margin-top: 0;
 }
 
+#spotlights a:visited {
+    color: white;
+}
+
 
 
 
